# tm-vec

./: .gitignore  README.md  setup.cfg
tmvec/: cli.py  utils.py
