[metadata]
name = tmvec
version = attr: tmvec.__version__
author = Valentyn Bezshapkin
author_email = valentyn.bezshapkin@micro.biol.ethz.ch
url = https://github.com/valentynbez/tmvec
description = Quick structure comparison via protein embeddings
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
platform = any
keywords = bioinformatics, protein, structure, embeddings
license_files = LICENSE.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Operating System :: OS Independent

[options]
zip_safe = false
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    torch
    lightning
    pysam
    transformers
    SentencePiece
    faiss-cpu
    optimum

[options.extras_require]
deepblast = deepblast
dev = wandb; pre-commit; matplotlib
scikit-bio =
    deepblast
    scikit-bio @ git+https://github.com/scikit-bio/scikit-bio

[project.scripts]


[options.entry_points]
console_scripts =
    tmvec = tmvec.cli:main
    embed = tmvec.embed:main
